--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,9 +1,28 @@
 $primoryColor : rgb(79, 19, 243);
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 50px 0;
+}
 h1{
     color: $primoryColor;
+    margin-bottom: 20px;
+}
+p{
+    color: gray;
 }
 a{
     color: $primoryColor;
     text-decoration: none;
     font-weight: bold;
+    padding: 3px 5px;
+    background-color: #bbdefb;
+    border-radius: 5px;
+    transition: .2s all ease-in-out;
+    &:hover{
+        background-color: $primoryColor;
+        color: #bbdefb;
+    }
 }
