complete contactlist and delete method,then styled

--- a/src/components/_Mixins.scss
+++ b/src/components/_Mixins.scss
@@ -1,4 +1,9 @@
+$primoryColor : rgb(79, 19, 243);
 @mixin box-shadow{
     border-radius: 15px;
     box-shadow: rgba(100,100,111,.2) 0px 7px 29px 0px;
+}
+@mixin text-title{
+    color: $primoryColor;
+    margin-bottom: 20px;
 }
