--- a/src/components/contactList.module.scss
+++ b/src/components/contactList.module.scss
@@ -1,8 +1,33 @@
-ul{
+// ul{
+
+// }
+// li{
+//     display: grid;
+//     grid-template-columns: 1fr 1fr 1fr;
+    
+// }
+@import "./Mixins";
+
+.message{
+    background-color: #f5f5f5;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    margin-top: 20px;
+    border-radius: 20px;
+    color: #6b6b6b;
+    font-size: 1.2rem;
+    font-weight: 500;
 
 }
-li{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    
+h3{
+    @include text-title;
+    // margin-top: 50px;
+}
+ul{
+    border: 2px solid #f5f5f5;
+    list-style: none;
+    margin-top: 20px;
+    padding: 5px;
+    border-radius: 15px;
 }
